Fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 
 @media (prefers-color-scheme: dark) {
   #root {
-    background: #171717;
+    background: #182118;
   }
 }
 
